--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 									<a href="https://github.com/seuxtx/pern-stack" target="_blank" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 									<p>A work in progress Pern App Project of getting a a random weapon from a class to use as their primary weapon. Three Classes depend on Secondaries or Melee as their Primary weapon(Spy and Medic).</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/seuxtx/pern-stack" target="_blank" class="button">Full Story</a></li>
+										<li><a href="https://github.com/seuxtx/pern-stack" target="_blank" class="button">View Code</a></li>
 									</ul>
 								</article>
 								<article>
